# securefs-name

./: CMakeLists.txt  README.md
sources/: configparser.cpp  configparser.hpp  crypto.cpp  exceptions.cpp  exceptions.hpp  lite_fs.cpp  lite_fs.h  main.cpp  mystring.cpp  myutils.cpp  platform.cpp  platform.h  scrypt.cpp
